# ssgvip-quarto-cmsc-courses

./: README.md  _quarto.yml.old  git_script.sh  index.qmd  ppa.sh
_site/: about.html  index.html  search.json
cli/: README.md  pycli.toml  pyproject.toml
db/: Makefile  cmsc-bulletin-spring-2023.xlsx  db_dml.sql  pyproject.toml  scanner.html  scanner.ipynb  scanner.md  scanner.py  scanner.qmd
db/qmds/: CMSC101.qmd  CMSC144.qmd  CMSC191.qmd  CMSC210.qmd  CMSC235.qmd  CMSC245.qmd  CMSC246.qmd  CMSC254.qmd  CMSC255.qmd  CMSC256.qmd  CMSC257.qmd  CMSC302.qmd  CMSC303.qmd  CMSC311.qmd  CMSC312.qmd  CMSC320.qmd  CMSC330.qmd  CMSC340.qmd  CMSC355.qmd  CMSC391.qmd  CMSC401.qmd  CMSC403.qmd  CMSC404.qmd  CMSC409.qmd  CMSC410.qmd  CMSC411.qmd  CMSC412.qmd  CMSC413.qmd  CMSC414.qmd  CMSC415.qmd  CMSC416.qmd  CMSC420.qmd  CMSC425.qmd  CMSC428.qmd  CMSC435.qmd  CMSC440.qmd  CMSC441.qmd  CMSC442.qmd  CMSC451.qmd  CMSC452.qmd  (+54 more)
docs/: CMSC101.html  CMSC144.html  CMSC191.html  CMSC210.html  CMSC235.html  CMSC245.html  CMSC246.html  CMSC254.html  CMSC255.html  CMSC256.html  CMSC257.html  CMSC302.html  CMSC303.html  CMSC311.html  CMSC312.html  CMSC320.html  CMSC330.html  CMSC340.html  CMSC355.html  CMSC391.html  CMSC401.html  CMSC403.html  CMSC404.html  CMSC409.html  CMSC410.html  CMSC411.html  CMSC412.html  CMSC413.html  CMSC414.html  CMSC415.html  CMSC416.html  CMSC420.html  CMSC425.html  CMSC428.html  CMSC435.html  CMSC440.html  CMSC441.html  CMSC442.html  CMSC451.html  CMSC452.html  (+54 more)
originals/: Makefile
precious/: Makefile
syllabus/: _syllabus.html  _syllabus.qmd  cmsc475.qmd  (+1 more)
(+54 files in other folders)
