[tool.poetry]
name = "db"
version = "0.1.0"
description = ""
authors = ["John Leonard <jdleonard@vcu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
pandas = "^2.0.0"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
gspread = "^5.8.0"
oauth2client = "^4.1.3"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
